# ilp_for

./: .axignore  .axiom.toml  .clang-format  .gitignore  .gitmodules  .lucignore  CMakeLists.txt  ILP_FOR_DESIGN.md  LLM.md  README.md  TODO.md  ilp_cpu_apple_m1.hpp  ilp_for.hpp
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench_all.sh  bench_reduce.cpp
cmake/: ilp_for-config.cmake.in
coverage/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
coverage/cpu_profiles/: ilp_cpu_profiles.hpp.func-c.html  ilp_cpu_profiles.hpp.func.html  ilp_cpu_profiles.hpp.gcov.html  index.html
coverage/detail/: ctrl.hpp.func-c.html  ctrl.hpp.func.html  ctrl.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  iota.hpp.func-c.html  iota.hpp.func.html  iota.hpp.gcov.html  loops_common.hpp.func-c.html  loops_common.hpp.func.html  loops_common.hpp.gcov.html  loops_ilp.hpp.func-c.html  loops_ilp.hpp.func.html  loops_ilp.hpp.gcov.html
cpu_profiles/: ilp_cpu_alderlake.hpp  ilp_cpu_apple_m1.hpp  ilp_cpu_default.hpp  ilp_cpu_skylake.hpp  ilp_cpu_zen5.hpp  ilp_optimal_n.hpp
detail/: ctrl.hpp  iota.hpp  lambda_check.hpp  loops.hpp  loops_common.hpp  loops_ilp.hpp  loops_pragma.hpp  loops_simple.hpp  macros_simple.hpp
docs/: ANALYSIS.md  EXAMPLES.md  ILP.md  PERFORMANCE.md  PRAGMA_UNROLL.md  axiom-test-report.md  godbolt_links.json
docs/tuner/: index.html  tuner-core.js  tuner-tests.html  tuner-tests.js
examples/: CMakeLists.txt  count_occurrences.cpp  find_and_return.cpp  find_first_match.cpp  manual_unroll_factor.cpp  parallel_min_max.cpp  process_with_break.cpp  range_with_index.cpp  reduce_with_early_exit.cpp  search_until.cpp  stride_iteration.cpp  validate_data.cpp
godbolt_examples/: INSTRUCTIONS.md  find_first_match.cpp  loop_with_break.cpp  loop_with_return.cpp  loop_with_return_typed.cpp  parallel_min.cpp  pragma_vs_ilp.cpp  sum_with_break.cpp  transform_simple.cpp
ilp_for/cpu_profiles/: ilp_cpu.hpp  ilp_cpu_alderlake.hpp  ilp_cpu_apple_m1.hpp  ilp_cpu_default.hpp  ilp_cpu_profiles.hpp  ilp_cpu_skylake.hpp  ilp_cpu_zen5.hpp  ilp_optimal_n.hpp
ilp_for/detail/: arch.hpp  ctrl.hpp  iota.hpp  loops_common.hpp  loops_ilp.hpp  macros_simple.hpp
knowledge/: CLAUDE.md  README.md  config.py  ilp_for_axioms.toml  ingest_config.py  knowledge_seed.json  mcp_server.py  requirements.txt  setup.sh
knowledge/db/antipatterns.lance/_transactions/: 0-d6524489-3919-4842-a76a-0e875f0d0962.txn  1-e0981c67-55e2-421b-b2c7-2e64b6671e01.txn  2-b46300d0-f794-425f-9a68-bafc231d6684.txn  3-81e992c5-a754-4fd1-8cd3-3faf2ab25df0.txn
knowledge/db/antipatterns.lance/_versions/: 1.manifest  2.manifest  3.manifest  4.manifest
knowledge/db/api_signatures.lance/_transactions/: 0-0b8d0b0e-3b10-4560-98eb-38bfeb0a8dda.txn  1-c2e5dc60-3373-46d2-bd1b-321701ba56d4.txn  10-1464d864-f072-4b70-bfd1-44276bd96594.txn  11-0b3400e7-d4f5-4ab6-84d4-bd2c38a54567.txn  12-d9720b93-e1c0-4c6b-8a2c-016a5237bd92.txn  13-65d441b6-c530-4ac1-b28c-ee25a3fee545.txn  2-2386a3b4-35b1-4bad-aaf0-ed9c3d6b1bc7.txn  3-c521917c-300c-400f-abb7-99d9373d7ca0.txn  4-70aa8966-6f42-42a6-9e59-2de7f27f357a.txn  5-b22587a3-4f84-43d8-9dcf-34e3b68024c7.txn  6-13e3736b-6dc9-460c-820c-b4f686f7e151.txn  7-a8b8b275-0b1f-4e0c-afc8-fa26c4527853.txn  8-c8389a7b-50a0-47e9-9663-01a72c94a04c.txn  9-6ca81ba4-7855-40fe-8a63-69194802fa75.txn
knowledge/db/api_signatures.lance/_versions/: 1.manifest  10.manifest  11.manifest  12.manifest  13.manifest  14.manifest  2.manifest  3.manifest  4.manifest  5.manifest  6.manifest  7.manifest  8.manifest  9.manifest
knowledge/db/compiler.lance/_transactions/: 0-79a0851c-d8b3-4bfb-9884-0d2380668460.txn  1-101bd536-e093-4b49-aebb-695f47a7d2eb.txn  2-12d1a9d9-5fd4-4945-9a61-d45623e3f42c.txn  3-f5af98a1-da21-4633-91c8-861eeb0a80f2.txn  4-3dfcb4e4-ff56-4b3f-9943-86bdb77b8fb3.txn  5-d0f0a503-e716-4afe-a959-eda08d27d8e6.txn
knowledge/db/compiler.lance/_versions/: 1.manifest  2.manifest  3.manifest  4.manifest  5.manifest  6.manifest
knowledge/db/gotchas.lance/_transactions/: 0-9e12dcef-876e-41f6-918d-603c497ce044.txn  1-29f49261-e2e7-400c-aa5d-83b8210bb2fa.txn  (+10 more)
knowledge/hooks/: rag_query_hook.py
knowledge/logs/: queries.jsonl
knowledge/scripts/: config.py  import_knowledge.py  rag_add.py  rag_delete.py  rag_ingest.py  rag_query.py  rag_setup.py  schema.py
knowledge/tests/: code_generation_evaluation.json  evaluate_codegen.py  evaluate_custom.py  evaluate_ragas.py  interactive_codegen_test.py  rag_evaluation.json  run_all_evals.sh  run_codegen.sh  run_interactive_test.sh
knowledge/tests/results/: custom_eval_20251223_090340.json
scripts/: generate_godbolt_links.py
tests/: CMakeLists.txt  Makefile  test_all_modes.sh  ubsan_suppressions.txt
tests/asm_compare/: escape.hpp
tests/asm_compare/handrolled/: find_value.cpp  find_value_no_ctrl.cpp  sum_backward.cpp  sum_negative.cpp  sum_odd.cpp  sum_plain.cpp  sum_range.cpp  sum_step2.cpp  sum_with_break.cpp
tests/asm_compare/ilp/: find_value.cpp  find_value_no_ctrl.cpp  sum_backward.cpp  sum_negative.cpp  sum_odd.cpp  sum_plain.cpp  sum_range.cpp  sum_step2.cpp  sum_with_break.cpp
tests/asm_compare/simple/: find_value.cpp  sum_negative.cpp  sum_odd.cpp  sum_plain.cpp  sum_range.cpp  sum_step2.cpp
tests/asm_compare/std/: find_value.cpp  sum_plain.cpp  sum_plain_reduce.cpp  sum_range.cpp
tests/correctness/: STRESS_TEST_FINDINGS.md  test_accumulator_bugs.cpp  test_asm_size.cpp  test_auto_select.cpp  test_basic.cpp  test_copy_count.cpp  test_cpu_profiles.cpp  test_deep_nesting.cpp  test_evil_cases.cpp  test_extreme_cases.cpp  test_find_range.cpp  test_find_until.cpp  test_for_loops.cpp  test_iota.cpp  test_more_edge_cases.cpp  test_overflow_warnings.cpp  test_range_idx_find.cpp  test_ranges.cpp  test_reduce.cpp  test_stress_edge_cases.cpp  test_unusual_patterns.cpp  test_user_mistakes.cpp
tools/clang-tidy/: CMakeLists.txt  ILPLoopCheck.cpp  ILPLoopCheck.h  ILPTidyModule.cpp  README.md
tools/clang-tidy/test/: CMakeLists.txt  loop_patterns.cpp  test_clang_tidy.cpp
tools/clang-tidy/vscode/: tasks.json
(+84 files in other folders)
